fix long word overflowing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -87,3 +87,10 @@
 .tippy-arrow {
   display: none !important;
 }
+
+.break-word-overflow {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-word;
+}
